# mp2-lab4-Polynomial

./: CMakeLists.txt
include/: DoublyLinkedList.hpp
src/: Polynomial.cpp
